# SurfacePartition

./: .gitignore  .python-version  README.md  gradient_descend_with_projection.py  manifold_partition.md  pyproject.toml  requirements.txt
.cursor/rules/: ring-partition.mdc
docs/: DATA_STRUCTURES_IMPACT_ANALYSIS.md  IMPLEMENTATION_PLAN_WITH_TESTING.md  PERIMETER_REFINEMENT.md  TOPOLOGY_SWITCHING_CRITICAL_ISSUES.md  TOPOLOGY_SWITCHING_EXPLANATION.md
examples/: find_optimal_partition.py  find_surface_partition.py  island_analyzer.py  optimization_analyzer.py  refine_perimeter.py  ring_visualization.py  surface_visualization.py  test_mesh_matrices.py  test_optimizer.py  test_projection.py
examples/debug_archive/: README.md  test_initial_partitions.py  test_lambda_values.py  test_phase1_triangle_segments.py  test_phase2_perimeter_calculator.py  test_refined_contour_extraction.py  test_variable_points.py
legacy/: pyslsqp_optimizer.py  ring_mesh.py
parameters/: input.yaml
results/run_20250801_173415_npart2_nr8_na16_lam0.0_seed42/: metadata.yaml  pyslsqp_part2_nt8_np16_lam0.0_seed42_level0_summary.out  ring_part2_nr8_na16_lam0.0_seed42_20250801_173415.h5
results/run_20250801_175941_npart2_nr8_na16_lam0.0_seed42/: metadata.yaml  pyslsqp_part2_nt8_np16_lam0.0_seed42_level0_summary.out  ring_part2_nr8_na16_lam0.0_seed42_20250801_175941.h5
scripts/: submit.sh
src/: __init__.py  config.py  find_contours.py  island_analysis.py  logging_config.py  plot_utils.py  plot_utils_3d.py  projection_iterative.py  pyslsqp_optimizer.py  ring_mesh.py
src/core/: mesh_topology.py  (+10 more)
(+91 files in other folders)
